Fix mobile transparency and combo number display issues

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="combo-container">
                 <div class="label"><span data-lang="en">Combo</span><span data-lang="zh" style="display:none;">连击</span></div>
-                <div class="value"><span id="combo-multiplier">1</span>x</div>
+                <div class="value"><span id="combo-multiplier">1</span><span>x</span></div>
             </div>
         </div>
         
