Fix multiple issues: stabilize grid, correct tile colors, fix mobile centering, update instructions to consistently show 1-6

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <p><span data-lang="en"><span class="emoji">★</span> = Wildcard (merges with any color)</span><span data-lang="zh" style="display:none;"><span class="emoji">★</span> = 百搭（与任何颜色合并）</span></p>
                 <p><span data-lang="en"><span class="emoji">◎</span> = Converter (changes adjacent colors)</span><span data-lang="zh" style="display:none;"><span class="emoji">◎</span> = 转换器（改变相邻颜色）</span></p>
                 <p><span data-lang="en">When tiles with values of 32 or 256 are created, they change color!</span><span data-lang="zh" style="display:none;">当创建值为32或256的方块时，它们会改变颜色！</span></p>
-                <p><span data-lang="en">Use color change buttons to flip colors of rows (1-6) or columns (1-6).</span><span data-lang="zh" style="display:none;">使用颜色更改按钮翻转行（1-6）或列（1-6）的颜色。</span></p>
+                <p><span data-lang="en">Use color change buttons to flip colors of rows (1-6) or columns (1-6). Limited uses!</span><span data-lang="zh" style="display:none;">使用颜色更改按钮翻转行（1-6）或列（1-6）的颜色。使用次数有限！</span></p>
             </div>
         </div>
          
